styling fixes for pages

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,7 +7,7 @@
    <title>UC Performance Review</title>
  </head>
  <body>
-   <div id="root"></div>
+   <div id="root" style="background-color: #f0f2f5;"></div>
    <script type="module" src="/src/main.tsx"></script>
  </body>
 </html>
